# soziopolis-reader

./: Cargo.toml  README.md
docs/: dev-notes.md
src/: app_paths.rs  logging.rs  settings.rs  soziopolis.rs
src/gui/: update.rs
src/soziopolis/: parse.rs
tests/: portable_package.rs  workflows.rs
tests/fixtures/: soziopolis_article_2026_05_24_fixture.html  soziopolis_article_cleanup_fixture.html  soziopolis_malformed_article_fixture.html  soziopolis_missing_title_article_fixture.html  soziopolis_section_2026_05_24_fixture.html
