[package]
name = "soziopolis_lingq_tool"
version = "1.1.0"
edition = "2024"
description = "Windows desktop app for browsing Soziopolis articles and uploading them to LingQ"
license = "MIT"
readme = "README.md"
repository = "https://github.com/funwithcthulhu/soziopolis-reader"

[dependencies]
anyhow = "1.0"
chrono = {
    version = "0.4",
    default-features = false,
    features = ["alloc", "std"],
}
dirs = "6.0"
iced = {
    version = "0.13",
    features = ["tokio"],
}
regex = "1.11"
reqwest = {
    version = "0.12",
    default-features = false,
    features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"],
}
rusqlite = {
    version = "0.37",
    features = ["bundled"],
}
scraper = "0.24"
serde = {
    version = "1.0",
    features = ["derive"],
}
serde_json = "1.0"
webbrowser = "1.0"

[target.'cfg(windows)'.dependencies]
keyring = {
    version = "3.6",
    features = ["windows-native"],
}

[build-dependencies]
winres = "0.1"
